# KugouMusic.rs

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
migrations/: 20260701000001_init.sql  20260702000001_seed_app_versions.sql
src/: config.rs  error.rs  lib.rs  main.rs  middleware.rs  routes.rs  state.rs
src/controllers/: album.rs  app_version.rs  artist.rs  comment.rs  discover.rs  external_playlist.rs  fm.rs  health.rs  login.rs  lyric.rs  media_catalog.rs  mod.rs  playlist.rs  playlist_read.rs  rank.rs  register.rs  report.rs  search.rs  song.rs  user.rs  youth.rs
src/kugou/: api_response.rs  crypto.rs  mod.rs  models.rs  session.rs  session_store.rs  signer.rs  transport.rs
src/services/: album.rs  app_version.rs  artist.rs  comment.rs  discover.rs  external_playlist.rs  fm.rs  login.rs  lyric.rs  media_catalog.rs  mod.rs  playlist.rs  rank.rs  register.rs  report.rs  search.rs  song.rs  user.rs  youth.rs
tests/: signature_golden.rs
